[package]
name = "loro-java"
version = "1.4.6"
edition = "2021"

[lib]
name = "loro"
crate-type = ["cdylib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[[bin]]
name = "uniffi-bindgen-java"
path = "src/uniffi-bindgen-java.rs"
bench = false


[dependencies]
loro-ffi = { git = "https://github.com/loro-dev/loro.git", tag = "loro-ffi@1.4.6" }
# loro-ffi = { path = "../../loro/crates/loro-ffi" }
uniffi = { version = "0.28.3" }
uniffi-bindgen-java = "0.1.0"

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[features]
cli = ["uniffi/cli"]
